# text-rag

./: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
src/text_rag/: .env.localstack  .env.production  api.py  aws_clients.py  cache.py  config.py  generator.py  logger.py  reranker.py  retriever.py  utils.py  worker.py
src/text_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
