#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "text-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "opensearch-py",
    "requests-aws4auth",
    "structlog",
    "pydantic",
    "python-dotenv",
    "setuptools>=80.9.0",
    "redis>=6.4.0",
    "redis-cli>=1.0.1",
    "openai>=1.109.1",
    "aiohttp>=3.12.15",
]

[project.scripts]
rag_api = "text_rag.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/text_rag"]
